# src/main/java/com/example/store/controller/ProductController.java
@@ -1,0 +1,40 @@
+package com.example.store.controller;
+
+import com.example.store.dto.CreateProductRequest;
+import com.example.store.dto.ProductDTO;
+import com.example.store.mapper.ProductMapper;
+import com.example.store.service.ProductService;
+
+import jakarta.validation.Valid;
+
+import lombok.RequiredArgsConstructor;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+
+@RestController
+@RequestMapping("/products")
+@RequiredArgsConstructor
+public class ProductController {
+
+    private final ProductService productService;
+    private final ProductMapper productMapper;
+
+    @GetMapping
+    public List<ProductDTO> getAllProducts() {
+        return productService.getAllProducts();
+    }
+
+    @GetMapping("/{id}")
+    public ProductDTO getProduct(@PathVariable Long id) {
+        return productService.getProduct(id);
+    }
+
+    @PostMapping
+    @ResponseStatus(HttpStatus.CREATED)
+    public ProductDTO createProduct(@Valid @RequestBody CreateProductRequest request) {
+        return productService.createProduct(productMapper.createProductRequestToProduct(request));
+    }
+}
